Supporting dictification for structs
Signed-off-by: Farhad Shahmohammadi <f.shahmohammadi@celonis.com>