@@ -68,6 +68,7 @@ import com.starrocks.sql.optimizer.operator.scalar.LikePredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.MatchExprOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperatorVisitor;
+import com.starrocks.sql.optimizer.operator.scalar.SubfieldOperator;
 import com.starrocks.sql.optimizer.rule.tree.JsonPathRewriteRule;
 import com.starrocks.sql.optimizer.statistics.CacheDictManager;
 import com.starrocks.sql.optimizer.statistics.CacheRelaxDictManager;
@@ -77,6 +78,7 @@ import com.starrocks.sql.optimizer.statistics.IDictManager;
 import com.starrocks.sql.optimizer.statistics.IRelaxDictManager;
 import com.starrocks.thrift.TAccessPathType;
 import com.starrocks.type.ArrayType;
+import com.starrocks.type.StructType;
 import com.starrocks.type.Type;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -85,6 +87,7 @@ import org.jetbrains.annotations.TestOnly;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -107,7 +110,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     private static final Logger LOG = LogManager.getLogger(DecodeCollector.class);
 
     public static final Set<String> LOW_CARD_AGGREGATE_FUNCTIONS = Sets.newHashSet(FunctionSet.COUNT,
-            FunctionSet.MULTI_DISTINCT_COUNT, FunctionSet.MAX, FunctionSet.MIN, FunctionSet.APPROX_COUNT_DISTINCT);
+            FunctionSet.MULTI_DISTINCT_COUNT, FunctionSet.MAX, FunctionSet.MIN, FunctionSet.APPROX_COUNT_DISTINCT,
+            FunctionSet.ANY_VALUE);
 
     //TODO(by satanson): it seems that we can support more windows functions in future, at present, we only support
     // LAG/LEAD/FIRST_VALUE/LAST_VALUE and the aggregations functions which can adopt low cardinality optimization
@@ -129,6 +133,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                     FunctionSet.REPLACE, FunctionSet.REVERSE, FunctionSet.RIGHT, FunctionSet.RPAD, FunctionSet.RTRIM,
                     FunctionSet.SPLIT_PART, FunctionSet.SUBSTR, FunctionSet.SUBSTRING, FunctionSet.SUBSTRING_INDEX,
                     FunctionSet.TRIM, FunctionSet.UPPER, FunctionSet.IF, FunctionSet.LENGTH, FunctionSet.CHAR_LENGTH);
+
+    public static final Set<String> LOW_CARD_STRUCT_FUNCTIONS =
+            ImmutableSet.of(FunctionSet.NAMED_STRUCT, FunctionSet.STRUCT, FunctionSet.ROW);
 
     // array<string> support:
     //  array<string> -> array<string>: array function
@@ -157,6 +164,15 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     private final Map<Integer, Integer> tableFunctionDependencies = Maps.newHashMap();
 
     private final Map<Integer, ScalarOperator> stringRefToDefineExprMap = Maps.newHashMap();
+
+    // Maintains a mapping from structs operators to field columnRefs to use for encoded fields. Currently only fields
+    // which correspond to a column ref can be encoded.
+    private final Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef =
+            Maps.newIdentityHashMap();
+
+    // Maintains a mapping from structs ColumnRefs to field columnRefs to use for encoded fields. Currently only fields
+    // which correspond to a column ref can be encoded.
+    private final Map<Integer, Map<String, ColumnRefOperator>> structRefToFieldUseStringRef = Maps.newHashMap();
 
     // string column use counter, 0 meanings decoded immediately after it was generated.
     // for compute global dict define expressions
@@ -315,23 +331,25 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
         // resolve depend-on relation:
         // like: b = upper(a), c = lower(b), if we forbidden a, should forbidden b & c too
-        for (Integer cid : stringRefToDefineExprMap.keySet()) {
+        stringRefToDefineExprMap.forEach((cid, defineExpr) ->  {
             if (matchChildren.contains(cid)) {
-                continue;
+                return;
             }
             if (context.allStringColumns.contains(cid)) {
-                continue;
+                return;
             }
             if (disableRewriteStringColumns.contains(cid)) {
-                continue;
+                return;
             }
             if (!checkDependOnExpr(cid, context.allStringColumns)) {
-                continue;
+                return;
             }
-            if (globalDicts.containsKey(cid) || expressionStringRefCounter.getOrDefault(cid, 0) != 0) {
+            // Structs which pass checkDependOnExpr have at least one encoded field. We keep the structs encoded.
+            if (globalDicts.containsKey(cid) || expressionStringRefCounter.getOrDefault(cid, 0) != 0
+                    || defineExpr.getType().isStructType()) {
                 context.allStringColumns.add(cid);
             }
-        }
+        });
 
         // Save the information of profitable string columns to DecodeContext
         for (Integer cid : context.allStringColumns) {
@@ -373,6 +391,50 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 context.operatorDecodeInfo.put(operator, info);
             }
         }
+        // Filling context's structOpToFieldUseStringRefMap and structRefToFieldUseStringRefMap with fields in
+        // context.allStringColumns.
+        context.structOpToFieldUseStringRefMap = structOpToFieldUseStringRef.entrySet().stream()
+                .map(e -> new Pair<>(
+                        e.getKey(),
+                        e.getValue().entrySet().stream()
+                                .filter(e2 -> context.allStringColumns.contains(e2.getValue().getId()))
+                                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
+                .filter(k -> !k.second.isEmpty())
+                .collect(Collectors.toMap(
+                        p -> p.first,
+                        p -> p.second,
+                        (oldVal, newVal) -> oldVal,
+                        IdentityHashMap::new));
+
+        context.structRefToFieldUseStringRefMap = structRefToFieldUseStringRef.entrySet().stream()
+                .map(e -> new Pair<>(
+                        e.getKey(),
+                        e.getValue().entrySet().stream()
+                                .filter(e2 -> context.allStringColumns.contains(e2.getValue().getId()))
+                                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
+                .filter(k -> !k.second.isEmpty())
+                .collect(Collectors.toMap(p -> p.first, p -> p.second));
+    }
+
+    // For SubfieldOperators, we just need to get the field column refs, not the whole columns in the struct.
+    private List<ColumnRefOperator> getColumnRefs(ScalarOperator op) {
+        if (op.isColumnRef()) {
+            return List.of((ColumnRefOperator) op);
+        }
+        if (op instanceof SubfieldOperator) {
+            SubfieldOperator subfieldOp = op.cast();
+            Map<String, ColumnRefOperator> fields = getFieldUseStringRefMap(subfieldOp.getChild((0)));
+            if (fields != null
+                    && subfieldOp.getFieldNames().size() == 1
+                    && fields.containsKey(subfieldOp.getFieldNames().get(0))) {
+                return List.of(fields.get(subfieldOp.getFieldNames().get(0)));
+            }
+        }
+        List<ColumnRefOperator> result = Lists.newArrayList();
+        for (ScalarOperator child : op.getChildren()) {
+            result.addAll(getColumnRefs(child));
+        }
+        return result;
     }
 
     private boolean checkDependOnExpr(int cid, Collection<Integer> checkList) {
@@ -383,7 +445,13 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             return false;
         }
         ScalarOperator define = stringRefToDefineExprMap.get(cid);
-        for (ColumnRefOperator ref : define.getColumnRefs()) {
+        if (define.getType().isStructType()) {
+            Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(define);
+            Preconditions.checkNotNull(fieldsMap);
+            // Any structs with encoded fields should pass. We filter the fields list later.
+            return fieldsMap.values().stream().anyMatch(c -> checkDependOnExpr(c.getId(), checkList));
+        }
+        for (ColumnRefOperator ref : getColumnRefs(define)) {
             if (ref.getId() == cid) {
                 return false;
             }
@@ -392,6 +460,28 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             }
         }
         return true;
+    }
+
+    Map<String, ColumnRefOperator> getFieldUseStringRefMap(ScalarOperator op) {
+        if (op.isColumnRef()) {
+            return structRefToFieldUseStringRef.get(((ColumnRefOperator) op).getId());
+        }
+        return structOpToFieldUseStringRef.get(op);
+    }
+
+    void setDefineExpr(ColumnRefOperator col, ScalarOperator define, int counter) {
+        if (define instanceof CallOperator && ((CallOperator) define).getFnName().equals(FunctionSet.ANY_VALUE)) {
+            Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(define.getChild(0));
+            if (fieldsMap != null) {
+                structOpToFieldUseStringRef.put(define, fieldsMap);
+            }
+        }
+        stringRefToDefineExprMap.putIfAbsent(col.getId(), define);
+        Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(define);
+        if (fieldsMap != null) {
+            structRefToFieldUseStringRef.putIfAbsent(col.getId(), fieldsMap);
+        }
+        expressionStringRefCounter.put(col.getId(), counter);
     }
 
     private DecodeInfo collectImpl(OptExpression optExpression, OptExpression parent) {
@@ -420,9 +510,15 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             }
         });
         info.inputStringColumns.getStream().forEach(c -> {
-            if (expressionStringRefCounter.containsKey(c)) {
-                expressionStringRefCounter.put(c, expressionStringRefCounter.get(c) + 1);
-            }
+            // For structs, we increase the counter of all of its encoded fields
+            List<Integer> columns = structRefToFieldUseStringRef.containsKey(c)
+                    ? structRefToFieldUseStringRef.get(c).values().stream().map(ColumnRefOperator::getId).toList()
+                    : List.of(c);
+            columns.forEach(id -> {
+                if (expressionStringRefCounter.containsKey(id)) {
+                    expressionStringRefCounter.put(id, expressionStringRefCounter.get(id) + 1);
+                }
+            });
         });
         allOperatorDecodeInfo.put(optExpression.getOp(), info);
         collectPredicate(optExpression.getOp(), info);
@@ -496,8 +592,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 // min/max should replace to dict column, count/count distinct don't need
                 if (FunctionSet.MAX.equals(value.getFnName()) || FunctionSet.MIN.equals(value.getFnName())) {
                     info.outputStringColumns.union(key.getId());
-                    stringRefToDefineExprMap.putIfAbsent(key.getId(), value);
-                    expressionStringRefCounter.put(key.getId(), 1);
+                    setDefineExpr(key, value, 1);
                 }
             }
         }
@@ -740,8 +835,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             // t0.a1 is array<string> column and low-cardinality encoded.
             if (value.getType().isStringType() || value.getType().isStringArrayType()) {
                 info.outputStringColumns.union(key.getId());
-                stringRefToDefineExprMap.putIfAbsent(key.getId(), value);
-                expressionStringRefCounter.put(key.getId(), 1);
+                setDefineExpr(key, value, 1);
             }
         }
 
@@ -816,10 +910,10 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             // aggregate ref -> aggregate expr
             stringAggregateExpressions.computeIfAbsent(key.getId(), x -> Lists.newArrayList()).add(value);
             // min/max should replace to dict column, count/count distinct don't need
-            if (FunctionSet.MAX.equals(value.getFnName()) || FunctionSet.MIN.equals(value.getFnName())) {
+            if (FunctionSet.MAX.equals(value.getFnName()) || FunctionSet.MIN.equals(value.getFnName())
+                    || FunctionSet.ANY_VALUE.equals(value.getFnName())) {
                 info.outputStringColumns.union(key.getId());
-                stringRefToDefineExprMap.putIfAbsent(key.getId(), value);
-                expressionStringRefCounter.put(key.getId(), 1);
+                setDefineExpr(key, value, 1);
             } else if (aggregate.getType().isLocal() || aggregate.getType().isDistinct()) {
                 // count/count distinct, need output dict-set in 1st stage
                 info.outputStringColumns.union(key.getId());
@@ -872,8 +966,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             ColumnRefOperator unnestInput = tableFunc.getFnParamColumnRefs().get(i);
 
             if (info.inputStringColumns.contains(unnestInput)) {
-                stringRefToDefineExprMap.put(unnestOutput.getId(), unnestInput);
-                expressionStringRefCounter.put(unnestOutput.getId(), 1);
+                setDefineExpr(unnestOutput, unnestInput, 1);
                 info.outputStringColumns.union(unnestOutput);
                 tableFunctionDependencies.put(unnestInput.getId(), unnestOutput.getId());
             }
@@ -1128,7 +1221,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         if (operator.getPredicate() == null) {
             return;
         }
-        DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(info.outputStringColumns);
+        DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(info.outputStringColumns,
+                structOpToFieldUseStringRef, sessionVariable.isEnableStructLowCardinalityOptimize());
         dictExpressionCollector.collect(operator.getPredicate());
 
         info.outputStringColumns.getStream().forEach(c -> {
@@ -1155,7 +1249,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
 
-            DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(decodeInput);
+            DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(decodeInput,
+                    structOpToFieldUseStringRef, sessionVariable.isEnableStructLowCardinalityOptimize());
 
             ScalarOperator value = operator.getProjection().getColumnRefMap().get(key);
             dictExpressionCollector.collect(value);
@@ -1170,9 +1265,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
                 // whole expression support dictionary, define new dict column
                 // only support varchar/array<varchar> column
-                if (exprs.contains(value) && supportLowCardinality(value.getType())) {
-                    stringRefToDefineExprMap.put(key.getId(), value);
-                    expressionStringRefCounter.putIfAbsent(key.getId(), 0);
+                if ((exprs.contains(value) && supportLowCardinality(value.getType())) ||
+                        structOpToFieldUseStringRef.containsKey(value)) {
+                    setDefineExpr(key, value, 0);
                     info.outputStringColumns.union(key.getId());
                 }
                 info.usedStringColumns.union(c);
@@ -1182,7 +1277,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     }
 
     private static boolean supportLowCardinality(Type type) {
-        return type.isVarchar() || (type.isArrayType() && ((ArrayType) type).getItemType().isVarchar());
+        return type.isVarchar()
+                || (type.isArrayType() && ((ArrayType) type).getItemType().isVarchar()
+                || type.isStructType());
     }
 
     private boolean supportAndEnabledLowCardinality(Type type) {
@@ -1190,9 +1287,10 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             return false;
         } else if (type.isArrayType()) {
             return sessionVariable.isEnableArrayLowCardinalityOptimize();
-        } else {
-            return true;
+        } else if (type.isStructType()) {
+            return sessionVariable.isEnableStructLowCardinalityOptimize();
         }
+        return true;
     }
 
     @TestOnly
@@ -1213,8 +1311,15 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
         private final ColumnRefSet matchChildren = new ColumnRefSet();
 
-        public DictExpressionCollector(ColumnRefSet allDictColumnRefs) {
+        private final Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef;
+        private final boolean isEnableStructLowCardinalityOptimize;
+
+        public DictExpressionCollector(ColumnRefSet allDictColumnRefs,
+                                       Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef,
+                                       boolean isEnableStructLowCardinalityOptimize) {
             this.allDictColumnRefs = allDictColumnRefs;
+            this.structOpToFieldUseStringRef = structOpToFieldUseStringRef;
+            this.isEnableStructLowCardinalityOptimize = isEnableStructLowCardinalityOptimize;
         }
 
         public void collect(ScalarOperator scalarOperator) {
@@ -1226,7 +1331,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (dictColumn.isColumnRef()) {
                 dictExpressions.computeIfAbsent(((ColumnRefOperator) dictColumn).getId(),
                         x -> Lists.newArrayList()).add(dictExpr);
-            } else if (!dictColumn.isConstant()) {
+            } else if (!dictColumn.isConstant() && !dictColumn.getType().isStructType()) {
                 // array[x], array_min(x)
                 List<ColumnRefOperator> used = dictColumn.getColumnRefs();
                 Preconditions.checkState(used.stream().distinct().count() == 1);
@@ -1255,10 +1360,12 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (collectors.stream().allMatch(CONSTANTS::equals)) {
                 return CONSTANTS;
             }
-
+            if (!(scalarOperator instanceof SubfieldOperator)
+                    && collectors.stream().anyMatch(s -> s.getType().isStructType())) {
+                return forbidden(collectors, scalarOperator);
+            }
             long variableExpr = collectors.stream().filter(VARIABLES::equals).count();
-            List<ScalarOperator> dictColumns = collectors.stream().filter(s -> !s.isConstant()).distinct()
-                    .collect(Collectors.toList());
+            List<ScalarOperator> dictColumns = collectors.stream().filter(s -> !s.isConstant()).distinct().toList();
             // only one scalar operator, and it's a dict column
             if (dictColumns.size() == 1 && variableExpr == 0) {
                 return dictColumns.get(0);
@@ -1283,7 +1390,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
 
         private ScalarOperator merge(List<ScalarOperator> collectors, ScalarOperator scalarOperator) {
-            if (collectors.stream().anyMatch(s -> s.getType().isArrayType())) {
+            if (collectors.stream().anyMatch(s -> s.getType().isArrayType()
+                    || s.getType().isStructType())) {
                 return forbidden(collectors, scalarOperator);
             }
             return mergeWithArray(collectors, scalarOperator);
@@ -1320,7 +1428,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             }
 
             if (FunctionSet.ARRAY_MIN.equalsIgnoreCase(call.getFnName()) ||
-                    FunctionSet.ARRAY_MAX.equalsIgnoreCase(call.getFnName())) {
+                    FunctionSet.ARRAY_MAX.equalsIgnoreCase(call.getFnName())
+                    || FunctionSet.ANY_VALUE.equals(call.getFnName())) {
                 // for support: `dictExpr(array_min(array) = 'a')`, not `dictExpr(array_min(array)) = 'a'`
                 ScalarOperator result = mergeWithArray(visitChildren(call, context), call);
                 return !result.isConstant() ? call : result;
@@ -1331,6 +1440,30 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                     LOW_CARD_AGGREGATE_FUNCTIONS.contains(call.getFnName())) {
                 return mergeWithArray(visitChildren(call, context), call);
             }
+            if (isEnableStructLowCardinalityOptimize && LOW_CARD_STRUCT_FUNCTIONS.contains(call.getFnName())
+                    && call.getChildren().stream().allMatch(
+                            c -> (c.isColumnRef() || c.isConstantRef()) && !c.getType().isStructType())) {
+                Map<String, ColumnRefOperator> fieldMap = Maps.newHashMap();
+                List<ScalarOperator> newChildren = visitChildren(call, context);
+                if (newChildren.stream().allMatch(CONSTANTS::equals)) {
+                    return CONSTANTS;
+                }
+                StructType structType = (StructType) call.getType();
+                for (int i = 0; i < newChildren.size(); ++i) {
+                    ScalarOperator newChild = newChildren.get(i);
+                    if (!newChild.isConstant()) {
+                        if (newChild.isColumnRef()) {
+                            int idx = FunctionSet.NAMED_STRUCT.equals(call.getFnName()) ? i / 2 : i;
+                            fieldMap.put(structType.getField(idx).getName(), (ColumnRefOperator) newChild);
+                        }
+                    }
+                }
+                if (!fieldMap.isEmpty()) {
+                    structOpToFieldUseStringRef.put(call, fieldMap);
+                    return call;
+                }
+                return VARIABLES;
+            }
             return forbidden(visitChildren(call, context), call);
         }
 
@@ -1340,10 +1473,35 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (supportLowCardinality(collectionElementOp.getChild(0).getType())) {
                 ScalarOperator result = mergeWithArray(children, collectionElementOp);
                 // for support: `dictExpr(array[0] = 'a')`, not `dictExpr(array[0]) = 'a'`
-                return !result.isConstant() ? collectionElementOp : result;
+                if (result.isConstant()) {
+                    return result;
+                } else if (result == collectionElementOp.getChild(0)) {
+                    return collectionElementOp;
+                } else {
+                    return new CollectionElementOperator(collectionElementOp.getType(),
+                            result, collectionElementOp.getChild(1), collectionElementOp.isCheckOutOfBounds());
+                }
 
             }
             return forbidden(children, collectionElementOp);
+        }
+
+        @Override
+        public ScalarOperator visitSubfield(SubfieldOperator op, Void context) {
+            ScalarOperator result = mergeWithArray(visitChildren(op, context), op);
+            if (result.isConstant()) {
+                return result;
+            }
+            ScalarOperator child = op.getChild(0);
+            Map<String, ColumnRefOperator> fieldsUseStringRef = structOpToFieldUseStringRef.get(child);
+            if (op.getFieldNames().size() == 1 && fieldsUseStringRef != null
+                    && fieldsUseStringRef.containsKey(op.getFieldNames().get(0))) {
+                return fieldsUseStringRef.get(op.getFieldNames().get(0));
+            }
+            if (result.isColumnRef()) {
+                saveDictExpr(result, op);
+            }
+            return VARIABLES;
         }
 
         @Override
